--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Text to Image</title>
+
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Jaro:opsz@6..72&family=Reenie+Beanie&display=swap" rel="stylesheet">
   <style>
+      @font-face {
+      font-family: font1;
+      src: url(font/font1.ttf);
+    }
+
+    @font-face {
+      font-family: font2;
+      src: url(font/font2.ttf);
+    }
     #text-input {
       padding: 10px;
       font-size: 16px;
@@ -22,6 +32,8 @@
     <option value="Jaro">Jaro</option>
     <option value="Courier Prime">Courier Prime</option>
     <option value="Reenie Beanie">Reenie Beanie</option>
+    <option value="font1">Font 1</option>
+    <option value="font2">Font 22</option>
   </select>
   <input type="text" id="text-input" placeholder="Enter your text">
   <button id="generate-button">Generate Image</button>
@@ -55,7 +67,7 @@
       canvas.height = textHeight + padding * 2;
 
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.font = '20px ' + selectedFont;
+      ctx.font = '60px ' + selectedFont;
       ctx.fillStyle = '#000';
 
       // Draw the text with padding
