--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <a href="./test.html">現貨表單</a>
   <select id="font-select">
     <option value="font1">❤️Font 1</option>
     <option value="font2">Font 2</option>
